--- a/index.html
+++ b/index.html
@@ -233,11 +233,11 @@
   <!-- Footer -->
 
   <footer id="footer">
-    <i class="social-icon fab fa-facebook"></i>
-    <i class="social-icon fab fa-twitter"></i>
-    <i class="social-icon fab fa-instagram"></i>
+    <i class="social-icon fab fa-facebook">https://www.facebook.com/bhargav.bagusetty/</i>
+    <i class="social-icon fab fa-twitter">https://twitter.com/home</i>
+    <i class="social-icon fab fa-instagram">https://www.instagram.com/</i>
     <i class="social-icon fas fa-envelope"></i>
-    <p>© Copyright Bhargav Bagusetty 2017 TinDog</p>
+    <p>© Copyright Bhargav Bagusetty 2022 TinDog</p>
 
   </footer>
 
